fixed a major bug

--- a/school_management/templates/school_management/manage_absences.html
+++ b/school_management/templates/school_management/manage_absences.html
@@ -24,7 +24,7 @@
                 </div>
                 <div>
                     <label for="reason" class="block text-sm font-medium text-gray-900">Reason</label>
-                    <textarea name="text" id="reason" placeholder="Enter reason"
+                    <textarea name="reason" id="reason" placeholder="Enter reason"
                         class="mt-2 block w-full px-4 py-3 rounded-lg border-2 border-gray-900 bg-white text-gray-900 placeholder-gray-500 focus:ring-2 focus:ring-blue-900 focus:border-blue-900 transition-all duration-200"></textarea>
                 </div>
                 <button type="submit" class="mt-4 bg-blue-900 text-white px-4 py-3 rounded-lg font-medium hover:bg-blue-700 hover:scale-105 transition-all duration-300">Record Absence</button>
