--- a/school_management/templates/school_management/manage_course.html
+++ b/school_management/templates/school_management/manage_course.html
@@ -90,7 +90,7 @@
                         {% endif %}
                     </div>
                 {% endfor %}
-                <button type="submit" class="w-full bg-brown-600 text-white px-6 py-3 rounded-lg font-medium hover:bg-brown-700 hover:scale-105 transition-all duration-300">Add Resource</button>
+                <button type="submit" class="w-full bg-blue-900 text-white px-6 py-3 rounded-lg font-medium hover:bg-brown-700 hover:scale-105 transition-all duration-300">Add Resource</button>
             </form>
         </section>
         <a href="{% url 'teacher_dashboard' %}" class="mt-6 inline-block bg-brown-600 text-white px-4 py-3 rounded-lg font-medium hover:bg-brown-700 hover:scale-105 transition-all duration-300">Back to Dashboard</a>
