--- a/school_management/templates/school_management/manage_students.html
+++ b/school_management/templates/school_management/manage_students.html
@@ -28,7 +28,7 @@
             <table class="min-w-full divide-y divide-gray-900">
                 <thead class="bg-blue-50">
                     <tr>
-                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-900 uppercase">Name</th>
+                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-900 uppercase">Email</th>
                         <th class="px-6 py-3 text-left text-xs font-medium text-gray-900 uppercase">Username</th>
                         <th class="px-6 py-3 text-left text-xs font-medium text-gray-900 uppercase">Email</th>
                         <th class="px-6 py-3 text-right text-xs font-medium text-gray-900 uppercase">Actions</th>
@@ -37,7 +37,7 @@
                 <tbody class="divide-y divide-gray-900">
                     {% for student in students %}
                         <tr class="hover:bg-blue-50 transition duration-200">
-                            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">{{ student.get_full_name }}</td>
+                            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">{{ student.email }}</td>
                             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">{{ student.username }}</td>
                             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">{{ student.email }}</td>
                             <td class="px-6 py-4 whitespace-nowrap text-sm space-x-2 text-right">
