--- a/website/templates/register.html
+++ b/website/templates/register.html
@@ -4,7 +4,7 @@
 {% block title %}Register{% endblock %}
 
 {% block content %}
-    <div class="min-h-screen flex items-center justify-center bg-blue-50 py-12 px-4 sm:px-6 lg:px-8 fade-in">
+    <div class="flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8 fade-in">
         <div class="max-w-md w-full">
             <img src="{% static 'images/classroom-banner.jpg' %}" alt="Classroom Banner" class="w-full h-32 object-cover rounded-t-lg shadow-md">
             <div class="bg-white p-8 rounded-b-lg shadow-md">
