more fixes in css

--- a/school_management/templates/school_management/manage_teachers.html
+++ b/school_management/templates/school_management/manage_teachers.html
@@ -4,7 +4,7 @@
 {% block title %}Manage Teachers{% endblock %}
 
 {% block content %}
-    <div class="min-h-screen flex items-center justify-center bg-blue-50 py-12 px-4 sm:px-6 lg:px-8 fade-in">
+    <div class="min-h-screen flex items-center justify-centerpy-12 px-4 sm:px-6 lg:px-8 fade-in">
         <div class="max-w-2xl w-full">
             <img src="{% static 'images/classroom-banner.jpg' %}" alt="Classroom Banner" class="w-full h-32 object-cover rounded-t-lg shadow-md">
             <div class="bg-white p-8 rounded-b-lg shadow-md">
